fix: link jump & code height limit

--- a/theme/styles/markdown/markdown.scss
+++ b/theme/styles/markdown/markdown.scss
@@ -80,7 +80,6 @@ div[class*="language-"] {
   line-height: var(--code-line-height);
   font-size: var(--code-font-size);
   font-family: var(--code-font-family);
-  display: flex;
   flex-direction: row-reverse;
   border-radius: 8px;
   border: 1px solid var(--st-c-border);
